added new layout file for shop
started to implement new layout similar to benco.com for nimbyx shop

--- a/Nimbyx.Dental/Views/Shared/_ShopLayout.cshtml
+++ b/Nimbyx.Dental/Views/Shared/_ShopLayout.cshtml
@@ -5,91 +5,37 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
+    <link href="~/Content/shopstyle.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
     <div class="container-fluid">
-        <header class="mainnav">
-            @RenderSection("Header", required: false)
-        </header>
-        <div class="row top-banner">
-            <div class="col-sm-6 top-banner-panel">
-                @RenderSection("TopBanner", required: false)
-            </div>
+        <div class="pay-logo"></div>
+        <div class="search-div">
+            <textarea>Painless Product Search</textarea>
+            <button class="btn-default">Search</button>
         </div>
-        <div class="row sign-up-top">
-            <div class="col-md-6 signup">
-                <p>Sign up for our newsletter</p>
-                <form id="subscribebottom">
-                    <div class="input-group signup-box">
-                        <input type="email" class="form-control signup-text" placeholder="Enter your email" name="email" id="email" required>
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button" id="btn-subscribebottom">SIGN UP</button>
-                        </span>
-                    </div>
-                </form>
-            </div>
+        <div class="horizontal-bar"></div>
+        <div class="menu-bar">
+            <ul>
+                <li>
+                    <a href="">Shop</a>
+                </li>
+                <li>
+                    <a href="">Pay</a>
+                </li>
+                <li>
+                    <a href="">New Arrivals</a>
+                </li>
+            </ul>
         </div>
-        <div class="row quick-links">
-            <h4 class="hidden-xs hidden-sm">nimbyx benefits:</h4>
-            <div class="col-sm-6 col-md-5 ui-links">
-                <div class="round-button">
-                    <div class="round-button-circle btn-gold">
-                        <span class="icon-newspaper-o"></span>
-                        <a href="news/index.html" class="round-button">nimbyx<br>NEWS</a>
-                    </div>
-                </div>
-                <span class="ui-caption">Be Better <br>Informed</span>
+        <form data-ng-app="nimbyxModule" data-ng-controller="payController" data-ng-init="$scope.init()" role="form" name="frm">
+            <div>
+                <ul>
+                    <li ng-repeat="(country,goals) in items">{{country}}: {{goals}}</li>
+                </ul>
             </div>
-            <div class="col-sm-6 col-md-5 ui-links">
-                <div class="round-button">
-                    <div class="round-button-circle btn-orange">
-                        <span class="icon-credit-card"></span>
-                        <a href="pay/index.html" class="round-button">nimbyx<br>PAY</a>
-                    </div>
-                </div>
-                <span class="ui-caption">Get Paid <br>Faster</span>
-            </div>
-            <div class="col-sm-6 col-md-5 ui-links">
-                <div class="round-button">
-                    <div class="round-button-circle btn-blue">
-                        <span class="icon-bar-chart"></span>
-                        <a href="lab/index.html" class="round-button">nimbyx<br>LAB</a>
-                    </div>
-                </div>
-                <span class="ui-caption">Easy Lab <br>Management</span>
-            </div>
-            <div class="col-sm-6 col-md-5 ui-links">
-                <div class="round-button">
-                    <div class="round-button-circle btn-green">
-                        <span class="icon-shopping-cart"></span>
-                        <a href="shop/index.html" class="round-button">nimbyx<br>SHOP</a>
-                    </div>
-                </div>
-                <span class="ui-caption">Connect With <br>Customers</span>
-            </div>
-        </div>
-        <div class="row ceo-remarks">
-            <div class="container ceo-bubble-container">
-                <div class="col-sm-4 col-md-1 ceo-bubble">
-                    <p>
-                        <img src="/Content/images/ceo-speech-first.png" style="vertical-align: text-top;">
-                        No one should have to rely on yesterday's news to make business decisions today.
-                        <img src="/Content/images/ceo-speech-last.png" style="vertical-align: text-top;">
-                    </p>
-                    <h5>Paolo Kalaw - CEO, nimbyx</h5>
-                    <div class="clearfix"></div>
-                </div>
-            </div>
-            <div class="container-fluid ceo-container">
-                <div class="col-xs-12 col-md-6 ceo-content">
-                    <h2>Get in the now.<br> Get in the know.</h2>
-                    <h3>Become part of nimbyx</h3>
-                    <button class="btn btn-default btn-lg" type="button" id="open-form">SIGN UP TODAY</button>
-                    <p>* We promise to never share your information with a third party.</p>
-                </div>
-            </div>
-        </div>
+        </form>
 
     </div>
 
